# services/api/app/domains/shopping/active_list.rb
@@ -1,0 +1,7 @@
+module Shopping
+  class ActiveList
+    def self.call(household:)
+      household.shopping_list || ShoppingList.create_or_find_by!(household:)
+    end
+  end
+end
