# services/api/app/domains/shopping/preference.rb
@@ -1,0 +1,7 @@
+module Shopping
+  class Preference
+    def self.call(household:)
+      household.household_preference || HouseholdPreference.create_or_find_by!(household:)
+    end
+  end
+end
